# dnd-simp

./: Cargo.toml  registry.yaml
assets/: camp.yaml  dnd5eapi-item.json  dnd5eapi-itemlist.json  outshop.yaml  test_shop.yaml
assets/dnd5eapi/magic-items/: apparatus-of-the-crab.json
assets/example_campaign/: campaign.yaml  simp.yaml
assets/example_campaign/characters/: character1.yaml  character2.yaml
assets/example_campaign/items/: arschlecken-350.yaml
assets/example_campaign/shops/: tina.yaml
src/: campaign.rs  economy.rs  main.rs  meta.rs  registry.rs  shop.rs
src/apis/: dnd5eapi.rs  mod.rs
src/data/: campaign.rs  character.rs  gold.rs  item.rs  mod.rs  shop.rs
src/state/: shop.rs
src/ui/: app.rs  characters.rs  display.rs  flow.rs  home.rs  key.rs  mod.rs  offer.rs  page.rs  settings.rs  shop.rs  shops.rs  translator.rs
