[package]
name = "dnd-simp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
mockall = "0.13.1"
ratatui = "0.28.1"
clap = { version = "4.5.23", features = ["derive"] }
chrono = "0.4.39"
log4rs = "1.3.0"
log = "0.4.22"
tui-markdown = "0.2.10"
strum = { version = "0.26.3", features = ["strum_macros", "derive"] }
strum_macros = "0.26.4"
tyche = "0.2.0"

[dev-dependencies]
mockall = "0.13.1"


